--- a/client.ipynb
+++ b/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "015d0ea7",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,12 @@
     "\n",
     "# Imports for server connection\n",
     "import socket\n",
-    "import io\n",
     "from send_receive import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "7ec9d484",
    "metadata": {},
    "outputs": [],
@@ -72,7 +71,6 @@
    ],
    "source": [
     "# Data fetching\n",
-    "\n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
     "mnist_testset = datasets.MNIST(root='./data', train=False, download=True, transform=None)\n",
     "\n",
@@ -147,7 +145,7 @@
     "# Get error rates\n",
     "for i in range(numModels):\n",
     "    errorRate = np.mean(models[i].forward(X_test) != Y_test)\n",
-    "    print(f\"Error rate for model {i}: {errorRate}\")\n"
+    "    print(f\"Error rate for model {i}: {errorRate}\")"
    ]
   }
  ],
@@ -167,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
