--- a/client.ipynb
+++ b/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "015d0ea7",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "7ec9d484",
    "metadata": {},
    "outputs": [],
@@ -57,40 +57,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "70ed0d44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10000])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data fetching\n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
     "mnist_testset = datasets.MNIST(root='./data', train=False, download=True, transform=None)\n",
     "\n",
-    "X_train = mnist_trainset.data\n",
-    "X_train = X_train.float().flatten(start_dim=1, end_dim=2)\n",
+    "# Use first 50,000 entries from mnist training set, rest are for server\n",
+    "X_train = mnist_trainset.data[:50000,:]\n",
+    "X_train = X_train.float().flatten(start_dim=1, end_dim=2) # Flatten training images\n",
     "Y_train = mnist_trainset.targets\n",
     "\n",
+    "# Load testsset\n",
     "X_test = mnist_testset.data\n",
-    "X_test = X_test.float().flatten(start_dim=1, end_dim=2)\n",
-    "Y_test = mnist_testset.targets"
+    "X_test = X_test.float().flatten(start_dim=1, end_dim=2) # Flatten test images\n",
+    "Y_test = mnist_testset.targets\n",
+    "\n",
+    "#X_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3a9fbba7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ConnectionRefusedError",
+     "evalue": "[Errno 111] Connection refused",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mConnectionRefusedError\u001b[39m                    Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     19\u001b[39m models = []\n\u001b[32m     21\u001b[39m s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m \u001b[43ms\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Receive numpy array from server for public features\u001b[39;00m\n\u001b[32m     25\u001b[39m features = recv_numpy(s)\n",
+      "\u001b[31mConnectionRefusedError\u001b[39m: [Errno 111] Connection refused"
+     ]
+    }
+   ],
    "source": [
-    "HOST = \"127.0.0.1\"  # Standard loopback interface address (localhost)\n",
+    "HOST = \"localhost\"  # Standard loopback interface address (localhost)\n",
     "PORT = 65432  # Port to listen on (non-privileged ports are > 1023)\n",
     "\n",
     "numModels = 10\n",
@@ -99,7 +107,6 @@
     "imgSize = len(X_train[0])\n",
     "X_trains = np.zeros((sampleSize, imgSize, numModels))\n",
     "Y_trains = np.zeros((sampleSize, numModels))\n",
-    "\n",
     "# Fill data for each model\n",
     "for m in range(numModels):\n",
     "    # Random indices for this model\n",
@@ -124,7 +131,9 @@
     "\n",
     "    # Loop to train each model\n",
     "    for i in range(numModels):\n",
-    "        models[i].fit(X_trains[:,:,i], Y_trains[:,i])\n",
+    "        optimSGD = SGD(params=models[i].parameters, lr=0.01)\n",
+    "        models[i].fit(X_trains[:,:,i], Y_trains[:,i], optimSGD)\n",
+    "\n",
     "\n",
     "    # Do predictions on all of the public dataset\n",
     "    predictions = []\n",
@@ -140,6 +149,7 @@
     "    aggregationLabels = recv_numpy(s)\n",
     "\n",
     "    for i in range(numModels):\n",
+    "        optimAdam = Adam(params=models[i].parameters, lr=0.01)\n",
     "        models[i].fit(aggregationFeatures, aggregationLabels)\n",
     "\n",
     "# Get error rates\n",
@@ -147,6 +157,14 @@
     "    errorRate = np.mean(models[i].forward(X_test) != Y_test)\n",
     "    print(f\"Error rate for model {i}: {errorRate}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f25afa40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -165,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
