--- a/client.ipynb
+++ b/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "015d0ea7",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,12 @@
     "\n",
     "# Imports for server connection\n",
     "import socket\n",
-    "import io\n",
     "from send_receive import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7ec9d484",
    "metadata": {},
    "outputs": [],
@@ -58,31 +57,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "70ed0d44",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10000])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Data fetching\n",
-    "\n",
     "mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
     "mnist_testset = datasets.MNIST(root='./data', train=False, download=True, transform=None)\n",
     "\n",
-    "X_train = mnist_trainset.data\n",
-    "X_train = X_train.float().flatten(start_dim=1, end_dim=2)\n",
+    "# Use first 50,000 entries from mnist training set, rest are for server\n",
+    "X_train = mnist_trainset.data[:50000,:]\n",
+    "X_train = X_train.float().flatten(start_dim=1, end_dim=2) # Flatten training images\n",
     "Y_train = mnist_trainset.targets\n",
     "\n",
+    "# Load testsset\n",
     "X_test = mnist_testset.data\n",
-    "X_test = X_test.float().flatten(start_dim=1, end_dim=2)\n",
-    "Y_test = mnist_testset.targets"
+    "X_test = X_test.float().flatten(start_dim=1, end_dim=2) # Flatten test images\n",
+    "Y_test = mnist_testset.targets\n",
+    "\n",
+    "#X_train.shape"
    ]
   },
   {
@@ -90,10 +84,24 @@
    "execution_count": null,
    "id": "3a9fbba7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     22\u001b[39m s.connect((HOST, PORT))\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Receive numpy array from server for public features\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m features = \u001b[43mrecv_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Create models\u001b[39;00m\n\u001b[32m     28\u001b[39m models = [MnistModel() \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(numModels)]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Developer/School/ECE-371/Cronus_Experiment/send_receive.py:40\u001b[39m, in \u001b[36mrecv_numpy\u001b[39m\u001b[34m(sock)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Receive a NumPy array over a socket.\"\"\"\u001b[39;00m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# --- Step 1: Read header length ---\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m header_len_bytes = \u001b[43mrecv_all\u001b[49m\u001b[43m(\u001b[49m\u001b[43msock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     41\u001b[39m (header_len,) = struct.unpack(\u001b[33m\"\u001b[39m\u001b[33m!I\u001b[39m\u001b[33m\"\u001b[39m, header_len_bytes)\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# --- Step 2: Read header ---\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Developer/School/ECE-371/Cronus_Experiment/send_receive.py:31\u001b[39m, in \u001b[36mrecv_all\u001b[39m\u001b[34m(sock, length)\u001b[39m\n\u001b[32m     29\u001b[39m data = \u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) < length:\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m     chunk = \u001b[43msock\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrecv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlength\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m chunk:\n\u001b[32m     33\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mConnectionError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mSocket closed while receiving data\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
-    "HOST = \"127.0.0.1\"  # Standard loopback interface address (localhost)\n",
-    "PORT = 65432  # Port to listen on (non-privileged ports are > 1023)\n",
+    "HOST = \"localhost\"  # Standard loopback interface address (localhost)\n",
+    "PORT = 65434  # Port to listen on (non-privileged ports are > 1023)\n",
     "\n",
     "numModels = 10\n",
     "iterations = 100\n",
@@ -101,7 +109,6 @@
     "imgSize = len(X_train[0])\n",
     "X_trains = np.zeros((sampleSize, imgSize, numModels))\n",
     "Y_trains = np.zeros((sampleSize, numModels))\n",
-    "\n",
     "# Fill data for each model\n",
     "for m in range(numModels):\n",
     "    # Random indices for this model\n",
@@ -126,7 +133,9 @@
     "\n",
     "    # Loop to train each model\n",
     "    for i in range(numModels):\n",
-    "        models[i].fit(X_trains[:,:,i], Y_trains[:,i])\n",
+    "        optimSGD = SGD(params=models[i].parameters, lr=0.01)\n",
+    "        models[i].fit(X_trains[:,:,i], Y_trains[:,i], optimSGD)\n",
+    "\n",
     "\n",
     "    # Do predictions on all of the public dataset\n",
     "    predictions = []\n",
@@ -142,13 +151,22 @@
     "    aggregationLabels = recv_numpy(s)\n",
     "\n",
     "    for i in range(numModels):\n",
+    "        optimAdam = Adam(params=models[i].parameters, lr=0.01)\n",
     "        models[i].fit(aggregationFeatures, aggregationLabels)\n",
     "\n",
     "# Get error rates\n",
     "for i in range(numModels):\n",
     "    errorRate = np.mean(models[i].forward(X_test) != Y_test)\n",
-    "    print(f\"Error rate for model {i}: {errorRate}\")\n"
+    "    print(f\"Error rate for model {i}: {errorRate}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f25afa40",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
