--- a/server.ipynb
+++ b/server.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4db8406f",
    "metadata": {},
    "outputs": [],
@@ -26,108 +26,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "6ac7d575",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_dataset():\n",
     "    mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
-    "    trainimages = mnist_trainset.data\n",
+    "    trainimages = mnist_trainset.data[50000:,:] #load the last 10,000 images leaving the rest for the clients private data\n",
     "    return trainimages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ee6d26a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10000, 28, 28])\n"
+     ]
+    }
+   ],
    "source": [
-    "HOST = \"0.0.0.0\"\n",
-    "PORT = 3505\n",
-    "\n",
     "NUM_CLIENTS = 10\n",
     "NUM_ROUNDS = 10\n",
     "NUM_CLASSES = 10\n",
     "\n",
-    "logit_dict = {}\n",
+    "logits_dict = {}\n",
     "num_responses = 0\n",
     "agreggation_done = 0\n",
     "\n",
     "public_data = load_dataset()\n",
-    "labels = np.empty(len(public_data))"
+    "labels = np.empty(len(public_data))\n",
+    "print(public_data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "5a3a834e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def aggregation_rule(logits_dict):\n",
+    "    global labels\n",
     "    #TODO: Define aggregation [logits(CLIENTS, IMAGES, CLASSES)->in, labels(IMAGES)->out]\n",
-    "    if num_responses >= NUM_CLIENTS:\n",
-    "        aggregated_logits = np.empty_like(labels)\n",
-    "        labels = aggregated_logits\n",
-    "        agreggation_done = 1\n",
-    "        num_responses = 0\n"
+    "    aggregated_logits = np.empty_like(labels)\n",
+    "    labels = aggregated_logits\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "2e1d57d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "def handle_client(conn, addr, public_data):\n",
+    "    global num_repsonses\n",
+    "    global logits_dict\n",
+    "    global labels\n",
     "    print(f\"[+] Connected: {addr}\")\n",
     "\n",
     "    try:\n",
     "        # INITIAL ROUND\n",
     "        # 1. Send initial public data\n",
-    "        data = send_receive.send_numpy(public_data.to_numpy())\n",
-    "        conn.sendall(len(data).to_bytes(8, 'big'))\n",
-    "        conn.sendall(data)\n",
+    "        send_receive.send_numpy(conn, public_data.numpy())\n",
     "\n",
     "        # 2. recieve public data logits\n",
-    "        size = int.from_bytes(conn.recv(8), 'big')\n",
-    "        payload = conn.recv(size)\n",
-    "        logits = send_receive.recv_numpy(payload)\n",
-    "        if not data:\n",
-    "            print(f\"[-] {addr} disconnected before responding\")\n",
-    "            conn.close()\n",
-    "            return\n",
-    "        \n",
+    "        logits = send_receive.recv_numpy(conn)\n",
+    "\n",
     "        #TODO: Aggregate\n",
     "        #Then update global var logit\n",
+    "        logits_dict[threading.get_ident()] = logits\n",
     "        num_repsonses += 1\n",
-    "        logit_dict[threading.get_ident()] = logits\n",
     "\n",
-    "        while agreggation_done != 1:\n",
-    "            continue\n",
-    "    \n",
-    "        agreggation_done = 0\n",
+    "        if num_responses >= NUM_CLIENTS:\n",
+    "            aggregation_rule(logits_dict)\n",
     "        \n",
     "        # SUBSEQUENT ROUNDS\n",
     "        for i in range(NUM_ROUNDS):\n",
-    "            data = send_receive.send_numpy(labels.to_numpy())\n",
-    "            conn.sendall(len(data).to_bytes(8, 'big'))\n",
-    "            conn.sendall(data)\n",
+    "            send_receive.send_numpy(conn, labels.numpy())\n",
     "\n",
-    "            size = int.from_bytes(conn.recv(8), 'big')\n",
-    "            payload = conn.recv(size)\n",
-    "            logits = send_receive.recv_numpy(payload)\n",
+    "            logits = send_receive.recv_numpy(conn)\n",
     "\n",
+    "            logits_dict[threading.get_ident()] = logits\n",
     "            num_responses += 1\n",
-    "            logit_dict[threading.get_ident()] = logits\n",
     "\n",
-    "            while agreggation_done != 1:\n",
-    "                continue\n",
-    "\n",
-    "\n",
+    "            if num_responses >= NUM_CLIENTS:\n",
+    "                aggregation_rule(logits_dict)\n",
     "\n",
     "    except ConnectionResetError:\n",
     "        print(f\"[-] Connection reset by {addr}\")\n",
@@ -135,7 +126,7 @@
     "        conn.close()\n",
     "        print(f\"[-] Disconnected: {addr}\")\n",
     "\n",
-    "def start_server():\n",
+    "def start_server(HOST, PORT):\n",
     "    server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
     "    server.bind((HOST, PORT))\n",
     "    server.listen()\n",
@@ -147,41 +138,32 @@
     "    while True:\n",
     "        conn, addr = server.accept()\n",
     "        thread = threading.Thread(target=handle_client, args=(conn, addr, public_data), daemon=True)\n",
-    "        aggregator = threading.Thread(target=aggregation_rule, args=(logit_dict), daemon=True)\n",
-    "        thread.start()\n",
-    "        aggregator.start()\n"
+    "        thread.start()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9b72cfd2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([10, 60000, 10])\n",
-      "[SERVER] Listening on 0.0.0.0:3505\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "OSError",
+     "evalue": "[Errno 48] Address already in use",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[34]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 60\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     59\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m60\u001b[39m     conn, addr = \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43maccept\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     61\u001b[39m     thread = threading.Thread(target=handle_client, args=(conn, addr, [public_data]), daemon=\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[32m     62\u001b[39m     thread.start()\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/.pyenv/versions/3.12.11/lib/python3.12/socket.py:295\u001b[39m, in \u001b[36msocket.accept\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    288\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34maccept\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m    289\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"accept() -> (socket object, address info)\u001b[39;00m\n\u001b[32m    290\u001b[39m \n\u001b[32m    291\u001b[39m \u001b[33;03m    Wait for an incoming connection.  Return a new socket\u001b[39;00m\n\u001b[32m    292\u001b[39m \u001b[33;03m    representing the connection, and the address of the client.\u001b[39;00m\n\u001b[32m    293\u001b[39m \u001b[33;03m    For IP sockets, the address info is a pair (hostaddr, port).\u001b[39;00m\n\u001b[32m    294\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m295\u001b[39m     fd, addr = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_accept\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    296\u001b[39m     sock = socket(\u001b[38;5;28mself\u001b[39m.family, \u001b[38;5;28mself\u001b[39m.type, \u001b[38;5;28mself\u001b[39m.proto, fileno=fd)\n\u001b[32m    297\u001b[39m     \u001b[38;5;66;03m# Issue #7995: if no default timeout is set and the listening\u001b[39;00m\n\u001b[32m    298\u001b[39m     \u001b[38;5;66;03m# socket had a (non-zero) timeout, force the new socket in blocking\u001b[39;00m\n\u001b[32m    299\u001b[39m     \u001b[38;5;66;03m# mode to override platform-specific socket flags inheritance.\u001b[39;00m\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m HOST = \u001b[33m\"\u001b[39m\u001b[33m127.0.0.1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      2\u001b[39m PORT = \u001b[32m65433\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m(HOST, PORT)\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstart_server\u001b[39m(HOST, PORT):\n\u001b[32m     42\u001b[39m     server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m     server.listen()\n\u001b[32m     46\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mOSError\u001b[39m: [Errno 48] Address already in use"
      ]
     }
    ],
    "source": [
-    "start_server()"
+    "HOST = \"127.0.0.1\"\n",
+    "PORT = 65434\n",
+    "start_server(HOST, PORT)"
    ]
   }
  ],
