tweaked server and client

--- a/server.ipynb
+++ b/server.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "id": "4db8406f",
    "metadata": {},
    "outputs": [],
@@ -26,21 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "6ac7d575",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_dataset():\n",
-    "    mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
-    "    trainimages = mnist_trainset.data[50000:,:] #load the last 10,000 images leaving the rest for the clients private data\n",
-    "    return trainimages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "ee6d26a6",
+   "execution_count": 41,
+   "id": "6780a712",
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +39,11 @@
     }
    ],
    "source": [
+    "def load_dataset():\n",
+    "    mnist_trainset = datasets.MNIST(root='./data', train=True, download=True, transform=None)\n",
+    "    trainimages = mnist_trainset.data[50000:,:] #load the last 10,000 images leaving the rest for the clients private data\n",
+    "    return trainimages\n",
+    "\n",
     "NUM_CLIENTS = 10\n",
     "NUM_ROUNDS = 10\n",
     "NUM_CLASSES = 10\n",
@@ -67,25 +59,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "5a3a834e",
+   "execution_count": null,
+   "id": "2e1d57d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 48] Address already in use",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 64\u001b[39m\n\u001b[32m     62\u001b[39m HOST = \u001b[33m\"\u001b[39m\u001b[33m127.0.0.1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     63\u001b[39m PORT = \u001b[32m65435\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 50\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m(HOST, PORT)\u001b[39m\n\u001b[32m     48\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstart_server\u001b[39m(HOST, PORT):\n\u001b[32m     49\u001b[39m     server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m50\u001b[39m     \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     51\u001b[39m     server.listen()\n\u001b[32m     53\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mOSError\u001b[39m: [Errno 48] Address already in use"
+     ]
+    }
+   ],
    "source": [
     "def aggregation_rule(logits_dict):\n",
     "    global labels\n",
     "    #TODO: Define aggregation [logits(CLIENTS, IMAGES, CLASSES)->in, labels(IMAGES)->out]\n",
     "    aggregated_logits = np.empty_like(labels)\n",
-    "    labels = aggregated_logits\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "2e1d57d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    labels = aggregated_logits\n",
+    "\n",
+    "\n",
     "def handle_client(conn, addr, public_data):\n",
     "    global num_repsonses\n",
     "    global logits_dict\n",
@@ -138,31 +136,10 @@
     "    while True:\n",
     "        conn, addr = server.accept()\n",
     "        thread = threading.Thread(target=handle_client, args=(conn, addr, public_data), daemon=True)\n",
-    "        thread.start()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b72cfd2",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 48] Address already in use",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[38]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m HOST = \u001b[33m\"\u001b[39m\u001b[33m127.0.0.1\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      2\u001b[39m PORT = \u001b[32m65433\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mstart_server\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[37]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36mstart_server\u001b[39m\u001b[34m(HOST, PORT)\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mstart_server\u001b[39m(HOST, PORT):\n\u001b[32m     42\u001b[39m     server = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[43mserver\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbind\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m     server.listen()\n\u001b[32m     46\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m[SERVER] Listening on \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mHOST\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m:\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mPORT\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mOSError\u001b[39m: [Errno 48] Address already in use"
-     ]
-    }
-   ],
-   "source": [
+    "        thread.start()\n",
+    "\n",
     "HOST = \"127.0.0.1\"\n",
-    "PORT = 65434\n",
+    "PORT = 65436\n",
     "start_server(HOST, PORT)"
    ]
   }
