--- a/client.ipynb
+++ b/client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "015d0ea7",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "7ec9d484",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "70ed0d44",
    "metadata": {},
    "outputs": [],
@@ -86,22 +86,104 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'type'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     22\u001b[39m s.connect((HOST, PORT))\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Receive numpy array from server for public features\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m features = \u001b[43mrecv_numpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# Create models\u001b[39;00m\n\u001b[32m     28\u001b[39m models = [MnistModel() \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(numModels)]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Developer/School/ECE-371/Cronus_Experiment/send_receive.py:40\u001b[39m, in \u001b[36mrecv_numpy\u001b[39m\u001b[34m(sock)\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"Receive a NumPy array over a socket.\"\"\"\u001b[39;00m\n\u001b[32m     39\u001b[39m \u001b[38;5;66;03m# --- Step 1: Read header length ---\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m40\u001b[39m header_len_bytes = \u001b[43mrecv_all\u001b[49m\u001b[43m(\u001b[49m\u001b[43msock\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     41\u001b[39m (header_len,) = struct.unpack(\u001b[33m\"\u001b[39m\u001b[33m!I\u001b[39m\u001b[33m\"\u001b[39m, header_len_bytes)\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# --- Step 2: Read header ---\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Developer/School/ECE-371/Cronus_Experiment/send_receive.py:31\u001b[39m, in \u001b[36mrecv_all\u001b[39m\u001b[34m(sock, length)\u001b[39m\n\u001b[32m     29\u001b[39m data = \u001b[33mb\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(data) < length:\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m     chunk = \u001b[43msock\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrecv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlength\u001b[49m\u001b[43m \u001b[49m\u001b[43m-\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     32\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m chunk:\n\u001b[32m     33\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mConnectionError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mSocket closed while receiving data\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 39\u001b[39m\n\u001b[32m     37\u001b[39m     XTR = X_trains[:,:,i]\n\u001b[32m     38\u001b[39m     YTR = Y_trains[:,i]\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mXTR\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtype\u001b[49m, YTR.type)\n\u001b[32m     40\u001b[39m     models[i].fit(torch.from_numpy(X_trains[:,:,i].astype(\u001b[38;5;28mfloat\u001b[39m)), torch.from_numpy(Y_trains[:,i].astype(\u001b[38;5;28mfloat\u001b[39m)), optimSGD, loss_fn, epochs)\n\u001b[32m     43\u001b[39m \u001b[38;5;66;03m# Do predictions on all of the public dataset\u001b[39;00m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'numpy.ndarray' object has no attribute 'type'"
      ]
     }
    ],
    "source": [
     "HOST = \"localhost\"  # Standard loopback interface address (localhost)\n",
-    "PORT = 65434  # Port to listen on (non-privileged ports are > 1023)\n",
+    "PORT = 65436  # Port to listen on (non-privileged ports are > 1023)\n",
+    "\n",
+    "numModels = 10\n",
+    "iterations = 100\n",
+    "sampleSize = len(X_train)//10\n",
+    "imgSize = len(X_train[0])\n",
+    "X_trains = np.zeros((sampleSize, imgSize, numModels))\n",
+    "Y_trains = np.zeros((sampleSize, numModels))\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "epochs = 100\n",
+    "# Fill data for each model\n",
+    "for m in range(numModels):\n",
+    "    # Random indices for this model\n",
+    "    idx = torch.randperm(len(X_train))[:sampleSize]\n",
+    "\n",
+    "    # Assign data\n",
+    "    X_trains[:, :, m] = X_train[idx].numpy()\n",
+    "    Y_trains[:, m]    = Y_train[idx].numpy()\n",
+    "\n",
+    "models = []\n",
+    "\n",
+    "s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "s.connect((HOST, PORT))\n",
+    "\n",
+    "# Receive numpy array from server for public features\n",
+    "features = recv_numpy(s)\n",
+    "\n",
+    "# Create models\n",
+    "models = [MnistModel() for _ in range(numModels)]\n",
+    "\n",
+    "for iteration in range(iterations):\n",
+    "\n",
+    "    # Loop to train each model\n",
+    "    for i in range(numModels):\n",
+    "        optimSGD = SGD(params=models[i].parameters(), lr=0.01)\n",
+    "        XTR = X_trains[:,:,i]\n",
+    "        YTR = Y_trains[:,i]\n",
+    "        print(XTR.dtype, YTR.dtype)\n",
+    "        models[i].fit(torch.from_numpy(X_trains[:,:,i].astype(float)), torch.from_numpy(Y_trains[:,i].astype(float)), optimSGD, loss_fn, epochs)\n",
+    "\n",
+    "\n",
+    "    # Do predictions on all of the public dataset\n",
+    "    predictions = []\n",
+    "    for i in range(numModels):\n",
+    "        predictions.append(models[i].forward(features))\n",
+    "    predictions = np.stack(predictions, axis=0)  \n",
+    "\n",
+    "    # Send predictions to server\n",
+    "    send_numpy(s, predictions)\n",
+    "\n",
+    "    # Receive aggregation from server\n",
+    "    aggregationFeatures = recv_numpy(s)\n",
+    "    aggregationLabels = recv_numpy(s)\n",
+    "\n",
+    "    for i in range(numModels):\n",
+    "        optimAdam = Adam(params=models[i].parameters, lr=0.01)\n",
+    "        models[i].fit(aggregationFeatures, aggregationLabels)\n",
+    "\n",
+    "# Get error rates\n",
+    "for i in range(numModels):\n",
+    "    errorRate = np.mean(models[i].forward(X_test) != Y_test)\n",
+    "    print(f\"Error rate for model {i}: {errorRate}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3a9fbba7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ConnectionRefusedError",
+     "evalue": "[Errno 111] Connection refused",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mConnectionRefusedError\u001b[39m                    Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m     19\u001b[39m models = []\n\u001b[32m     21\u001b[39m s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m \u001b[43ms\u001b[49m\u001b[43m.\u001b[49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHOST\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mPORT\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Receive numpy array from server for public features\u001b[39;00m\n\u001b[32m     25\u001b[39m features = recv_numpy(s)\n",
+      "\u001b[31mConnectionRefusedError\u001b[39m: [Errno 111] Connection refused"
+     ]
+    }
+   ],
+   "source": [
+    "HOST = \"localhost\"  # Standard loopback interface address (localhost)\n",
+    "PORT = 65432  # Port to listen on (non-privileged ports are > 1023)\n",
     "\n",
     "numModels = 10\n",
     "iterations = 100\n",
@@ -134,6 +216,7 @@
     "    # Loop to train each model\n",
     "    for i in range(numModels):\n",
     "        optimSGD = SGD(params=models[i].parameters, lr=0.01)\n",
+    "        \n",
     "        models[i].fit(X_trains[:,:,i], Y_trains[:,i], optimSGD)\n",
     "\n",
     "\n",
